Updated requests from Program (accent color, content organization) and some layout issues

--- a/assets/_sass/spotlights/arctic/_intro.scss
+++ b/assets/_sass/spotlights/arctic/_intro.scss
@@ -9,12 +9,12 @@
 
   &::after {
     position: absolute;
-    top: calc(100% - 120px);
+    top: calc(100% - 200px);
     left: 0;
     display: block;
     content: '';
     width: 100%;
-    height: 120px;
+    height: 200px;
     background: linear-gradient(
       180deg,
       rgba(255, 255, 255, 0),
